# Barrage

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  vcpkg.json
Core/: CMakeLists.txt  Engine.cpp  Engine.hpp  stdafx.h
Core/Actions/: ActionManager.cpp  ActionManager.hpp
Core/Audio/: AudioManager.cpp  AudioManager.hpp
Core/BehaviorTrees/: BehaviorNode.cpp  BehaviorNode.hpp  BehaviorNode.tpp  BehaviorNodeFactory.cpp  BehaviorNodeFactory.hpp  BehaviorTree.cpp  BehaviorTree.hpp
Core/Debug/: AllocOverrides.hpp  MemoryDebugger.cpp  MemoryDebugger.hpp  MemoryOverrides.hpp  SymbolManager.cpp  SymbolManager.hpp
Core/Debug/LINUX/: MemoryDebugger.cpp  SymbolManager.cpp
Core/Debug/MSVC/: MemoryDebugger.cpp  SymbolManager.cpp
Core/Engine/: Engine.cpp  Engine.hpp
Core/Entry/: Entry.cpp  Entry.hpp
Core/File/: FileManager.cpp  FileManager.hpp  FileManager.tpp
Core/File/Graphics/: ImageSource.cpp  ImageSource.hpp
Core/File/LINUX/: FileManager.cpp
Core/File/MSVC/: FileManager.cpp
Core/File/Objects/: ObjectSource.cpp  ObjectSource.hpp
Core/Framerate/: FramerateController.cpp  FramerateController.hpp
Core/FramerateController/: FramerateController.cpp  FramerateController.hpp
Core/Input/: InputManager.cpp  InputManager.hpp  KeyMap.hpp
Core/Math/: Curves.hpp  Curves.tpp
Core/Math/Curves/: BezierCurve.cpp  BezierCurve.hpp
Core/Objects/: ObjectManager.cpp  ObjectManager.hpp  ObjectManager.tpp
Core/Objects/Archetypes/: ArchetypeManager.cpp  ArchetypeManager.hpp  ObjectArchetype.cpp  ObjectArchetype.hpp  PoolArchetype.cpp  PoolArchetype.hpp
Core/Objects/Behavior/: BehaviorNode.cpp  BehaviorNode.hpp  BehaviorNode.tpp  BehaviorNodeFactory.cpp  BehaviorNodeFactory.hpp  BehaviorNodeFactory.tpp  BehaviorTree.cpp  BehaviorTree.hpp  ParallelNode.cpp  ParallelNode.hpp
Core/Objects/Components/: Component.cpp  Component.hpp  Component.tpp  ComponentAllocator.cpp  ComponentAllocator.hpp  ComponentAllocator.tpp  ComponentArray.cpp  ComponentArray.hpp  ComponentArray.tpp  ComponentFactory.cpp  ComponentFactory.hpp  ComponentFactory.tpp  EngineComponents.hpp
Core/Objects/Pools/: Pool.cpp  Pool.hpp  Pool.tpp  PoolInfo.cpp  PoolInfo.hpp  PoolManager.cpp  PoolManager.hpp  PoolType.cpp  PoolType.hpp
Core/Objects/SpawnFuncs/: EngineSpawnFuncs.hpp  SpawnFuncManager.cpp  SpawnFuncManager.hpp
Core/Objects/SpawnFunctions/: SpawnFunctionManager.cpp  SpawnFunctionManager.hpp
Core/Objects/Spawning/: SpawnFunctionManager.cpp  SpawnFunctionManager.hpp  SpawnInfo.cpp  SpawnInfo.hpp  SpawnLayer.cpp  SpawnLayer.hpp  SpawnRule.cpp  SpawnRule.hpp  SpawnRule.tpp  SpawnRuleAllocator.cpp  SpawnRuleAllocator.hpp  SpawnRuleAllocator.tpp  SpawnRuleFactory.cpp  SpawnRuleFactory.hpp  SpawnRuleFactory.tpp  SpawnType.cpp  SpawnType.hpp
Core/Objects/Systems/: BaseSystem.cpp  BaseSystem.hpp  DrawSystem.hpp  EngineSystems.hpp  System.cpp  System.hpp  SystemFactory.cpp  SystemFactory.hpp  SystemFactory.tpp  SystemManager.cpp  SystemManager.hpp  SystemManager.tpp
Core/Random/: Random.cpp  Random.hpp
Core/Registration/: Registrar.cpp  Registrar.hpp  Registrar.tpp
Core/Renderer/: Renderer.cpp  Renderer.hpp  RendererTypes.hpp
Core/Renderer/Framebuffers/: Framebuffer.cpp  Framebuffer.hpp
Core/Renderer/Shaders/: Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp
Core/Renderer/Textures/: Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
Core/Rendering/: GLError.hpp  GfxDraw2D.cpp  GfxDraw2D.hpp  GfxFactory2D.cpp  GfxFactory2D.hpp  GfxManager2D.cpp  GfxManager2D.hpp  GfxPrimitives.cpp  GfxPrimitives.hpp  GfxRegistry2D.cpp  GfxRegistry2D.hpp  GfxRenderer2D.cpp  GfxRenderer2D.hpp  GfxTypes.cpp  GfxTypes.hpp  GfxUtil.cpp  GfxUtil.hpp  WindowManager.cpp  WindowManager.hpp
Core/Scenes/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
Core/Serialization/: ComponentRefl.cpp  ComponentRefl.hpp  DataWrapper.cpp  DataWrapper.hpp  DataWrapper.tpp  Serializer.cpp  Serializer.hpp  Serializer.tpp
Core/SimpleRenderer/: SimpleRenderer.cpp  SimpleRenderer.hpp
Core/SimpleRenderer/SimpleShader/: SimpleShader.cpp  SimpleShaderManager.cpp  SimpleShaderManager.hpp
Core/SimpleRenderer/SimpleTexture/: SimpleTexture.hpp  SimpleTextureManager.cpp  SimpleTextureManager.hpp
Core/Spaces/: Space.cpp  Space.hpp  SpaceManager.cpp  SpaceManager.hpp
Core/TempRenderer/: TestRenderer.cpp  TestRenderer.hpp
Core/TempRenderer/TempShader/: TestShader.cpp  TestShaderManager.hpp
Core/TempRenderer/TempTexture/: TestTexture.cpp  TestTextureManager.cpp  TestTextureManager.hpp
Core/Utilities/: DeepPtr.hpp  DeepPtr.tpp  Logger.cpp  Logger.hpp  Mallocator.hpp  Mallocator.tpp  RecursionTable.hpp  RecursionTable.tpp  RuntimeError.cpp  RuntimeError.hpp  Utilities.hpp  Utilities.tpp
Core/Window/: WindowManager.cpp  WindowManager.hpp
Editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorData.cpp  EditorData.hpp  main.cpp
Editor/Assets/: entry.json
Editor/Commands/: Command.hpp  CommandQueue.cpp  CommandQueue.hpp
Editor/Data/: EditorData.cpp  EditorData.hpp
Editor/GUI/: GUI.cpp  GUI.hpp
Editor/Project/: Project.cpp  Project.hpp
Editor/Source/: main.cpp
Editor/Source/Commands/: Command.cpp  Command.hpp  CommandQueue.cpp  CommandQueue.hpp
Editor/Source/Editor/: Editor.cpp  Editor.hpp  EditorData.cpp  EditorData.hpp
Gameplay/: CMakeLists.txt  Registration.cpp  RttrRegistration.cpp
Gameplay/ComponentArrays/: AngularSpeedArray.hpp  ColorTintArray.hpp  DestructibleArray.hpp  DirectoryIndexArray.hpp  ParentArray.hpp  PositionArray.hpp  RotationArray.hpp  ScaleArray.hpp  SpawnTimerArray.hpp  TextureSpaceArray.hpp  TextureUVArray.hpp  VelocityArray.hpp
Gameplay/Components/: BoundaryBox.hpp  CircleCollider.hpp  ObjectDirectory.hpp  Player.hpp  RNG.hpp  Spawner.hpp  Sprite.hpp
Gameplay/Registration/: Registration.cpp
Legacy/Core-Library/: CMakeLists.txt
Legacy/Game-Library/: CMakeLists.txt
Legacy/Run-Editor/: CMakeLists.txt
Legacy/Run-Game/: CMakeLists.txt
Samples/DemoGame/: CMakeLists.txt
tests/: CMakeLists.txt  windowing.cpp
(+640 files in other folders)
